# SOLID_principles_notebook

./: .buildinfo  README.md  genindex.html  intro.html  notebooks.html  notebooks.ipynb  objects.inv  pyproject.toml  search.html
_sources/: notebooks.ipynb
solid_principles_notebook/: _config.yml
solid_principles_notebook/_build/.doctrees/: environment.pickle  intro.doctree  notebooks.doctree
solid_principles_notebook/_build/html/: .buildinfo  genindex.html  intro.html  notebooks.html  search.html  searchindex.js
solid_principles_notebook/_build/html/_sources/: intro.md
solid_principles_notebook/_build/jupyter_execute/: notebooks.ipynb
